--- a/calculator.html
+++ b/calculator.html
@@ -5,7 +5,7 @@
   <head>
     
     <title> My 1st Calculator </title>
-    <link rel="stylesheet" href="sss.css">
+    <link rel="stylesheet" href="calculator.css">
   </head> 
 
   <body>
